Fri May  5 23:10:47 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/xsltInternals.h libxslt/attributes.c
	  libxslt/documents.c libxslt/extensions.c
	  libxslt/extensions.h libxslt/functions.c
	  libxslt/imports.c libxslt/keys.c libxslt/preproc.c
	  libxslt/transform.c libxslt/variables.c libxslt/xslt.c
	  libxslt/xsltutils.c libxslt/xsltutils.h libexslt/functions.c:
	  Next step of refactoring (plus some bug-fixes).
	  For more details see #340780.

Fri May  5 14:31:53 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* tests/exslt/common/node-set.5.out
	  tests/exslt/sets/difference.1.out
	  tests/exslt/functions/function.6.out: Reverting the
	  changes; I'll rather change the processing stylesheet
	  documents in a way that they will produce the same results
	  for broken and stricter whitespace-stripping.

Thu May  4 22:55:26 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* tests/exslt/common/node-set.5.out
	  tests/exslt/sets/difference.1.out
	  tests/exslt/functions/function.6.out: Changed regression test
	  results (bug #340684). Those will now produce regression
	  errors; so we need to fix the processor.

Mon May  1 17:39:27 EDT 2006 Daniel Veillard <daniel@veillard.com>

	* configure.in NEWS doc//*: preparing release of 1.1.16, updated and
	  regenerated the docs.

Tue Apr 25 15:02:42 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* configure.in: applied patch from Joseph Sacco changing slightly
	  the python detection scheme should fix bug #338527

Wed Apr 12 13:35:45 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/attributes.c libxslt/preproc.c libxslt/transform.c
	  libxslt/variables.c libxslt/xslt.c libxslt/xsltInternals.h
	  libxslt/xsltutils.c libxslt/xsltutils.h:
	  Refactored the internal structures into specialized
	  structures and adjusted the code to work with those new
	  structures. I didn't yet (we should in the future)
	  renamed any fields of the old structures in order to avoid